// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructionsChooser renders correctly with AI and UPI 1`] = `
<div
  className="pf-c-content ocm-page instructions-chooser"
>
  <InstructionsChooserCard
    body="Runs Assisted Installer with standard configuration settings to create your cluster."
    featureListItems={
      Array [
        "Preflight validations",
        "Smart defaults",
        "For connected networks",
      ]
    }
    footerLinkHref="#"
    footerLinkText="Learn more about interactive"
    href="/assisted-installer/clusters/~new"
    id="select-interactive"
    labels={
      <React.Fragment>
        <Label
          color="blue"
          icon={
            <StarIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          }
        >
          Recommended
        </Label>
        <Label
          color="purple"
        >
          Web-based
        </Label>
      </React.Fragment>
    }
    title="Interactive"
  />
  <InstructionsChooserCard
    body="Make all of the decisions when you create your cluster."
    featureListItems={
      Array [
        "User Provisioned Infrastructure",
        "Highly customizable",
      ]
    }
    footerLinkHref="#"
    footerLinkText="Learn more about full control"
    href="/install/arm/user-provisioned"
    id="select-full-control"
    labels={
      <Label
        color="purple"
      >
        CLI-based
      </Label>
    }
    title="Full control"
  />
</div>
`;

exports[`InstructionsChooser renders correctly with AI enabled 1`] = `
<div
  className="pf-c-content ocm-page instructions-chooser"
>
  <InstructionsChooserCard
    body="Runs Assisted Installer with standard configuration settings to create your cluster."
    featureListItems={
      Array [
        "Preflight validations",
        "Smart defaults",
        "For connected networks",
      ]
    }
    footerLinkHref="#"
    footerLinkText="Learn more about interactive"
    href="/assisted-installer/clusters/~new"
    id="select-interactive"
    labels={
      <React.Fragment>
        <Label
          color="blue"
          icon={
            <StarIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          }
        >
          Recommended
        </Label>
        <Label
          color="purple"
        >
          Web-based
        </Label>
      </React.Fragment>
    }
    title="Interactive"
  />
  <InstructionsChooserCard
    body="Auto-provision your infrastructure with minimal configuration to create your cluster."
    featureListItems={
      Array [
        "Installer Provisioned Infrastructure",
      ]
    }
    footerLinkHref="#"
    footerLinkText="Learn more about automated"
    href="/install/metal/installer-provisioned"
    id="select-automated"
    labels={
      <Label
        color="purple"
      >
        CLI-based
      </Label>
    }
    title="Automated"
  />
  <InstructionsChooserCard
    body="Make all of the decisions when you create your cluster."
    featureListItems={
      Array [
        "User Provisioned Infrastructure",
        "Highly customizable",
      ]
    }
    footerLinkHref="#"
    footerLinkText="Learn more about full control"
    href="/install/metal/user-provisioned"
    id="select-full-control"
    labels={
      <Label
        color="purple"
      >
        CLI-based
      </Label>
    }
    title="Full control"
  />
</div>
`;

exports[`InstructionsChooser renders correctly with default settings 1`] = `
<div
  className="pf-c-content ocm-page instructions-chooser"
>
  <InstructionsChooserCard
    body="Auto-provision your infrastructure with minimal configuration to create your cluster."
    featureListItems={
      Array [
        "Installer Provisioned Infrastructure",
      ]
    }
    footerLinkHref="#"
    footerLinkText="Learn more about automated"
    href="/install/aws/installer-provisioned"
    id="select-automated"
    labels={
      <Label
        color="purple"
      >
        CLI-based
      </Label>
    }
    title="Automated"
  />
  <InstructionsChooserCard
    body="Make all of the decisions when you create your cluster."
    featureListItems={
      Array [
        "User Provisioned Infrastructure",
        "Highly customizable",
      ]
    }
    footerLinkHref="#"
    footerLinkText="Learn more about full control"
    href="/install/aws/user-provisioned"
    id="select-full-control"
    labels={
      <Label
        color="purple"
      >
        CLI-based
      </Label>
    }
    title="Full control"
  />
</div>
`;
